--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,16 @@ dependencies:
   #make request to api
   retrofit: ^3.0.1
 
+  #Database
+  floor: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  floor_generator: ^1.2.0
+  build_runner: ^2.4.8
+  retrofit_generator: ^4.2.0
 
 flutter:
   uses-material-design: true
