--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   #Database
   floor: any
 
+  #service locator
+  get_it: ^7.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
