--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,14 @@ dependencies:
   #service locator
   get_it: ^7.6.0
 
+  #state management
+  provider: ^6.0.4
+
+  #internet connection checker
+  connectivity_plus: ^2.1.0
+
+  rxdart: #latest version
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
